--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "konva": "^10.2.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
+    "react-color-palette": "^7.3.1",
     "react-dom": "^19.2.0",
     "react-konva": "^19.2.2",
     "react-router-dom": "^7.13.0"
